// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Byline should render correctly 1`] = `
.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: -0.5rem;
  margin-left: -0.5rem;
}

.emotion-0 {
  border-radius: 50%;
  height: 4rem;
  margin-right: 0.5rem;
  margin-left: 0.5rem;
  width: 4rem;
}

.emotion-6 {
  list-style: none;
  margin-top: 0;
  margin-bottom: 0;
  padding-right: 0;
  padding-left: 0;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
}

@media (min-width:37.5rem) {
  .emotion-6 {
    font-size: 0.875rem;
  }
}

.emotion-2 {
  color: #3F3F42;
}

.emotion-4 {
  color: #6E6E73;
}

<div>
  <div
    class="emotion-8 emotion-9"
  >
    <img
      alt=""
      class="emotion-0 emotion-1"
      src="http://www.bbc.co.uk/john-smith.jpg"
    />
    <ul
      class="emotion-6 emotion-7"
      role="list"
    >
      <li
        class="emotion-2 emotion-3"
        role="listitem"
      >
        John Smith
      </li>
      <li
        class="emotion-4 emotion-5"
        role="listitem"
      >
        Art editor
      </li>
    </ul>
  </div>
</div>
`;

exports[`Byline should render correctly without an avatar 1`] = `
.emotion-4 {
  list-style: none;
  margin-top: 0;
  margin-bottom: 0;
  padding-right: 0;
  padding-left: 0;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 0.875rem;
  }
}

.emotion-0 {
  color: #3F3F42;
}

.emotion-2 {
  color: #6E6E73;
}

.emotion-6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div>
  <div
    class="emotion-6 emotion-7"
  >
    <ul
      class="emotion-4 emotion-5"
      role="list"
    >
      <li
        class="emotion-0 emotion-1"
        role="listitem"
      >
        By John Smith
      </li>
      <li
        class="emotion-2 emotion-3"
        role="listitem"
      >
        Art editor
      </li>
    </ul>
  </div>
</div>
`;
